--- a/force-app/main/default/classes/SurveyResponseTriggerHandler.cls
+++ b/force-app/main/default/classes/SurveyResponseTriggerHandler.cls
@@ -7,34 +7,16 @@ public without sharing class SurveyResponseTriggerHandler {
     public static final String SURVEY_RESPONSE_STATUS_COMPLETED = 'Completed';
     public static final String SURVEY_RESPONSE_STATUS_PAUSED = 'Paused';
     
-    // Handlers: -------------------------------------------------------------------------------------------------------
-    
-    public class ChangeCompleteSurveyTaskStatusHandler extends TriggerHandler{
-        
-        public override void afterInsert(List<SObject> newList) {
-            changeCompleteSurveyTaskStatus(newList, null);
-        }
-        
-        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            changeCompleteSurveyTaskStatus(newList, (Map<Id, SurveyResponse>) oldMap);
-        }
-    }
-    
-    
-    // Logic: ----------------------------------------------------------------------------------------------------------
-    
-    @TestVisible
-    private static void changeCompleteSurveyTaskStatus(List<SurveyResponse> newList,  Map<Id, SurveyResponse> oldMap){
+    @InvocableMethod(Label='Handle Suvey Response status Change')
+    public static void handleStatusChange(List<SurveyResponse> srList){
         List<Id> contactIdsForCloseTask = new List<Id>();
         List<Id> contactIdsForPauseTask = new List<Id>();
-        for(SurveyResponse sr : newList){
-            if(oldMap == null || (oldMap != null && oldMap.get(sr.Id).Status != sr.Status)){
-                if(sr.Status == SURVEY_RESPONSE_STATUS_COMPLETED) {
-                    contactIdsForCloseTask.add(sr.SubmitterId);
-                }
-                if(sr.Status == SURVEY_RESPONSE_STATUS_PAUSED){
-                    contactIdsForPauseTask.add(sr.SubmitterId);
-                }
+        for(SurveyResponse sr : srList){
+            if(sr.Status == SURVEY_RESPONSE_STATUS_COMPLETED) {
+                contactIdsForCloseTask.add(sr.SubmitterId);
+            }
+            if(sr.Status == SURVEY_RESPONSE_STATUS_PAUSED){
+                contactIdsForPauseTask.add(sr.SubmitterId);
             }
         }
     
@@ -61,4 +43,5 @@ public without sharing class SurveyResponseTriggerHandler {
         System.debug('FOR PAUSE SIZE: ' + tasksForComplete.size());
         update tasksForPause;
     }
+    
 }
