--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -21,6 +21,7 @@ public without sharing class TaskService {
     public static final String TASK_TYPE_VISIT = 'Visit';
     
     public static final String TASK_CODE_COMPLETE_BASELINE_SURVEY = 'Complete_Baseline_Survey';
+    public static final String TASK_CODE_COMPLETE_SURVEY = 'Complete_Survey';
     public static final String TASK_CODE_COMPLETE_YOUR_PROFILE = 'Complete_Your_Profile';
     
     public static final String OPEN_TASKS_ORDER = ' ORDER BY Priority DESC, ActivityDate NULLS LAST, CreatedDate DESC';
@@ -125,6 +126,19 @@ public without sharing class TaskService {
                 Priority = TASK_PRIORITY_CRITICAL,
                 WhoId = participantContactId,
                 Visible_For__c = TASK_VISIBILITY_OWNER
+        );
+    }
+
+    public Task createCompleteSurveyTask(Id ownerId, Id participantContactId, Id surveyId) {
+        return new Task(
+                OwnerId = ownerId,
+                Subject = TaskService.TASK_CODE_COMPLETE_SURVEY,
+                Task_Code__c = TaskService.TASK_CODE_COMPLETE_SURVEY,
+                Status = TASK_STATUS_OPEN,
+                Priority = TASK_PRIORITY_CRITICAL,
+                WhoId = participantContactId,
+                Visible_For__c = TASK_VISIBILITY_OWNER,
+                WhatId = surveyId
         );
     }
     
