Fix referral source translation

--- a/force-app/main/default/classes/ParticipantItem.cls
+++ b/force-app/main/default/classes/ParticipantItem.cls
@@ -12,6 +12,7 @@ public class ParticipantItem {
     @AuraEnabled public Boolean showPSESteps;
     
     public ParticipantItem(Participant_Enrollment__c pe){
+        pe.Referral_Source__c = TranslateHelper.getPickListLabel(Participant_Enrollment__c.Referral_Source__c, pe.Referral_Source__c);
         this.pe = pe;
         this.pse = pe.Participant_Study_Enrollment__r;
         this.showPSESteps = pe.Study_Site__r.Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c == 'Yes';
