--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -228,6 +228,7 @@ public without sharing class CommunityService {
                         Last_Session_Id__c,
                         MailingLatitude,
                         MailingLongitude,
+                        MailingCountry,
                         Account.BillingCountry
                 FROM Contact
                 WHERE Id = :contactId
